cmake_minimum_required(VERSION 3.12)
project(leetcode_c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_c__ main.cpp)
add_executable(1 leetcode_221_MaximalSquare.cpp)
add_executable(2 leetcode_55_JumpGame.cpp)
add_executable(3 leetcode_142_LinkedListCycleII.cpp)
add_executable(4 leetcode_581_ShortestUnsortedContinuousSubarray.cpp)