cmake_minimum_required(VERSION 3.12)
project(sword_c__)

set(CMAKE_CXX_STANDARD 14)
add_executable(sword_c__ main.cpp)
add_executable(min_heap minHeap.cpp)
add_executable(1 二维数组中的查找.cpp)
add_executable(2 替换空格.cpp)
add_executable(3 从尾到头打印链表.cpp)
add_executable(4 重建二叉树.cpp)
add_executable(5 用两个栈实现队列.cpp)
add_executable(6 旋转数组的最小值.cpp)
add_executable(7 斐波那契数列.cpp)
add_executable(8 跳台阶.cpp)
add_executable(9 变态跳台阶.cpp)
add_executable(10 矩形覆盖.cpp)
add_executable(11 二进制中1的个数.cpp)
add_executable(12 数值的整数次方.cpp)
add_executable(13 调整数组顺序使奇数位于偶数前面.cpp)
add_executable(14 链表中倒数第k个节点.cpp)
add_executable(15 反转链表.cpp)
add_executable(16 合并两个排序的链表.cpp)
add_executable(17 树的子结构.cpp)
add_executable(18 二叉树的镜像.cpp)
add_executable(19 顺时针打印矩阵.cpp)
add_executable(20 包含min函数的最小栈.cpp)
add_executable(21 栈的压入和弹出.cpp)
add_executable(22 从上往下打印二叉树.cpp)
add_executable(23 二叉搜索树的后序遍历.cpp)
add_executable(24 二叉树中和为某一值的路径.cpp)
add_executable(25 复杂链表的复制.cpp)
add_executable(26 二叉搜索树与双向链表.cpp)
add_executable(27 字符串的排列.cpp)
add_executable(28 数组中出现次数超过一半的数字.cpp)
add_executable(29 最小的k个数.cpp)
add_executable(30 连续子数组的最大和.cpp)
add_executable(31 整数中1出现的次数.cpp)
add_executable(32 把数组排成最小的数.cpp)
add_executable(33 丑数.cpp)
add_executable(34 第一个只出现一次的字符.cpp)
add_executable(35 两个链表的第一个公共结点.cpp)
add_executable(36 数字在排序数组中出现的次数.cpp)
add_executable(37 二叉树的深度.cpp)
add_executable(38 平衡二叉树.cpp)
add_executable(39 数组中只出现一次的数字.cpp)
add_executable(40 和为s的连续正整数.cpp)
add_executable(41 和为s的两个数字.cpp)

